--- a/html/mainView.html
+++ b/html/mainView.html
@@ -930,6 +930,87 @@
         <!-- card guard end -->
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-md-8">
+        <!-- card card-total-tour-duration start -->
+        <div class="card card-total-tour-duration">
+          <div class="card-header">
+            <h4>Total tour duration</h4>
+          </div>
+          <div class="card-body">
+            <div class="row border py-3">
+              <div class="col-md-3 mt-2">
+                <div class="input-group date" data-provide="datepicker">
+                    <label for="" style="margin-top: 10px; margin-right: 5px">From</label>
+                    <input type="text" class="form-control">
+                </div>
+              </div>
+              <div class="col-md-3 mt-2">
+                <div class="input-group date" data-provide="datepicker">
+                    <label for="" style="margin-top: 10px; margin-right: 5px">To</label>
+                    <input type="text" class="form-control">
+                </div>
+              </div>
+              <div class="col-md-3 mt-2">
+                <select class="form-control">
+                  <option value="">Guard 1</option>
+                  <option value="">Guard 2</option>
+                  <option value="">Guard 3</option>
+                </select>
+              </div>
+              <div class="col-md-3">
+                <button class="btn btn-info btn-custom float-right">Refresh</button>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <div class="table-responsive">
+                  <table class="table table-hover table-striped">
+                    <thead>
+                      <tr>
+                        <th>Date</th>
+                        <th>Total tour duration</th>
+                        <th>Tours</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>2015/07/13</td>
+                        <td>01:03:01</td>
+                        <td>18:20:20 - 19:45:24</td>
+                      </tr>
+                      <tr>
+                        <td>2015/07/13</td>
+                        <td>01:03:01</td>
+                        <td>18:20:20 - 19:45:24</td>
+                      </tr>
+                      <tr>
+                        <td>2015/07/13</td>
+                        <td>01:03:01</td>
+                        <td>18:20:20 - 19:45:24</td>
+                      </tr>
+                      <tr>
+                        <td>2015/07/13</td>
+                        <td>01:03:01</td>
+                        <td>18:20:20 - 19:45:24</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <button class="btn btn-info btn-custom">Export to Excel</button>
+                <button class="btn btn-info btn-custom">Export to PDF</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- card card-total-tour-duration end -->
+      </div>
+    </div>
     
   </div>
 
