--- a/html/mainView.html
+++ b/html/mainView.html
@@ -935,7 +935,7 @@
       <div class="col-md-8">
         <!-- card card-total-tour-duration start -->
         <div class="card card-total-tour-duration">
-          <div class="card-header">
+          <div class="card-header bg-main-color">
             <h4>Total tour duration</h4>
           </div>
           <div class="card-body">
