--- a/html/mainView.html
+++ b/html/mainView.html
@@ -41,9 +41,7 @@
   <!-- navbar start-->
   <nav class="navbar navbar-expand-lg bg-main-color white-text">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <i class="fa fa-shield icon-custom" style="color: whitesmoke"></i>
-      </a>
+      <a class="navbar-brand" href="#"><i class="fa fa-shield icon-custom" style="color: whitesmoke"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
         aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars icon-custom" style="color: white"></i>
@@ -51,21 +49,6 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">
-              <i class="fa fa-home icon-navbar"></i> Company
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-user icon-navbar"></i>Client
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fa fa-line-chart icon-navbar"></i>Routes
-            </a>
-          </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <i class="	fa fa-book icon-navbar"></i>Reports
@@ -78,21 +61,21 @@
           </li>
         </ul>
         <ul class="navbar-nav">
+          <!-- <li class="nav-item">
+            <a href="" class="nav-link">
+            <i class="fa fa-file-sound-o icon-navbar"></i>Mute
+          </a>
+        </li>
           <li class="nav-item">
             <a href="" class="nav-link">
-              <i class="fa fa-file-sound-o icon-navbar"></i>Mute
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">
-              <i class="fa fa-question-circle-o icon-navbar"></i>Help
+            <i class="fa fa-question-circle-o icon-navbar"></i>Help
             </a>
           </li>
           <li class="nav-item">
             <a href="" class="nav-link">
               <i class="fa fa-cog icon-navbar"></i>Iosdemo
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -169,11 +152,8 @@
           <!-- card header -->
           <div class="card-header bg-main-color custom-card-header">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12">
                 <h4>Map</h4>
-              </div>
-              <div class="col-6">
-                <button class="btn btn-danger float-right btn-custom">Hide map</button>
               </div>
             </div>
           </div>
@@ -191,7 +171,7 @@
         <div class="card card-controls">
           <!-- card header -->
           <div class="card-header bg-main-color custom-card-header">
-            <div class="row my-2"></div>
+            <h4>Events</h4>
           </div>
           <div class="card-body custom-card-body">
             <div class="row mt-1">
