--- a/html/login.html
+++ b/html/login.html
@@ -44,13 +44,12 @@
                 <label class="form-check-label" for="#checkLogin">Check me out</label>
               </div>
               <div class="text-center">
-                <button type="submit" class="btn btn-success my-3">Log in</button>
+                <button type="submit" class="btn bg-main-color my-3">Log in</button>
                 <button class="btn btn-reset" type="reset">Reset</button>
               </div>
             </form>
           </div>
         </div>
-
       </div>
     </div>
   </div>
@@ -64,6 +63,52 @@
 
   <!-- bootstrap js core -->
   <script src="../MDB Free/js/bootstrap.min.js"></script>
+
+  <script>
+    $(() => {
+      $('#formLogin').submit(checkLogin);
+    })
+
+    function checkLogin() {
+      event.preventDefault();
+
+      //let username = $('#usernameLogin').val();
+      //let password = $('#passwordLogin').val();
+      let data = {
+        "sUserName": "nguyendung",
+        "sPassWord": "123456789"
+      };
+      
+      $.ajax({
+          url: 'http://192.168.1.128:8080/tracking/api/checklogin.php',
+          method: 'post',
+          data: data
+        })
+        .then(res => {
+          console.log(res);
+        })
+        .catch(err => console.log(err));
+    }
+
+    function checkValidData(username, password) {
+      let errMsg = '';
+      let valid = true;
+
+      if (username == '' || username == undefined) {
+        valid = false;
+        errMsg += 'Username can not be missed';
+      }
+      if (password == '' || password == undefined) {
+        valid = false;
+        errMsg += 'Password can not be missed';
+      }
+      if (!valid) {
+        alert(errMsg);
+      }
+      return valid;
+    }
+    
+  </script>
 </body>
 
 </html>
