--- a/html/incidents.html
+++ b/html/incidents.html
@@ -18,13 +18,13 @@
   <!-- datepicker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
-  <!-- leaflet css cdn -->
+  <!-- leaflet css -->
+  <!-- <script src="../plugins/leaflet/css/leaflet.css"></script> -->
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
-
-  <!-- map box css cdn -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 
@@ -34,7 +34,9 @@
   <!-- custom main css -->
   <link rel="stylesheet" href="../custom/css/mainView.css">
 
+  <!-- incident css -->
   <link rel="stylesheet" href="../custom/css/incident.css">
+
   <title>Incidents</title>
 </head>
 
@@ -143,8 +145,8 @@
     <div class="row">
       <div class="col-12">
         <!-- Large modal map view -->
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"
-          id="modalmapViewIncident">
+        <div class="modal fade bd-example-modal-lg"
+          id="modalIncidentMap">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
               <div class="modal-header">
@@ -154,7 +156,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <div id="mapIncident"></div>
+                
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
@@ -162,12 +164,13 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <!-- image modal -->
-        <div class="modal fade" id="modalIncidentImage" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="modalIncidentImage">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -177,14 +180,12 @@
                 </button>
               </div>
               <div class="modal-body">
-                  <img src="" alt="Incident Image" class="img-thumbnail img-fluid mx-auto d-block" id="incidentImg" style="width: 100%; height: 400px">
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+                <img src="" alt="Incident Image" class="img-thumbnail img-fluid mx-auto d-block" id="incidentImg" style="width: 100%; height: 400px">
               </div>
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -207,12 +208,11 @@
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
-  <!-- leaflet js CDN -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
-
   <!-- mapbox js CDN -->
   <script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
+
+  <!-- leaflet js -->
+  <script src="../plugins/leaflet/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
