--- a/html/mainView.html
+++ b/html/mainView.html
@@ -21,9 +21,6 @@
   <!-- leaflet css -->
   <link rel="stylesheet" href="../plugins/leaflet/css/leaflet.css">
 
-  <!-- map box css cdn -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 
@@ -178,27 +175,19 @@
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
-  <!-- leaflet js CDN -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
-
-  <!-- mapbox js CDN -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
-
-  <!-- custom main.jc -->
+  <!-- custom main.js -->
   <script src="../custom/js/main.js"></script>
 
   <!-- translate js -->
   <script src="../custom/js/translate.js"></script>
 
-  <!-- map js -->
-  <script src="../custom/js/map.js"></script>
-
   <!-- leaflet js -->
   <script src="../plugins/leaflet/js/leaflet.js"></script>
 
+  <!-- map js -->
+  <script src="../custom/js/map.js"></script>
 
-
+  
 
 
 </body>
