--- a/html/points.html
+++ b/html/points.html
@@ -18,13 +18,6 @@
   <!-- datepicker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
-  <!-- leaflet css cdn -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
-
-  <!-- map box css cdn -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 
@@ -34,59 +27,66 @@
   <!-- custom main css -->
   <link rel="stylesheet" href="../custom/css/mainView.css">
 
+  <!-- leaflet css -->
+  <!-- <script src="../plugins/leaflet/css/leaflet.css"></script> -->
+
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
   <title>Points</title>
 </head>
 
 <body>
   <!-- navbar start-->
   <nav class="navbar navbar-expand-lg bg-main-color white-text" style="padding-top: 0; padding-bottom: 0">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <i class="fa fa-shield icon-custom" style="color: whitesmoke"></i>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars icon-custom" style="color: white"></i>
-        </button>
-  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="mainView.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Main View</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="events.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Events</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="incidents.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Incidents</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="assets.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Assets</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="points.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Points</span>
-              </a>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-            <button class="btn custom-btn bg-main-color trn" id="changeLanguage">English</button>
-          </ul>
-        </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <i class="fa fa-shield icon-custom" style="color: whitesmoke"></i>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa fa-bars icon-custom" style="color: white"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="mainView.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Main View</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Events</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="incidents.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Incidents</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="assets.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Assets</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="points.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Points</span>
+            </a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <button class="btn custom-btn bg-main-color trn" id="changeLanguage">English</button>
+        </ul>
       </div>
+    </div>
   </nav>
   <!-- navbar end -->
 
@@ -139,44 +139,57 @@
         <!-- card Points end -->
       </div>
     </div>
-  </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="modal fade bd-example-modal-lg" id="modalMapPoint">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Point Map</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
 
-  <!-- JQuery core -->
-  <script src="../MDB Free/js/jquery-3.3.1.min.js"></script>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <!-- popper js core -->
-  <script src="../MDB Free/js/popper.min.js"></script>
+    <!-- JQuery core -->
+    <script src="../MDB Free/js/jquery-3.3.1.min.js"></script>
 
-  <!-- bootstrap js core -->
-  <script src="../MDB Free/js/bootstrap.min.js"></script>
+    <!-- popper js core -->
+    <script src="../MDB Free/js/popper.min.js"></script>
 
-  <!-- Meterail Design Bootstrap JS -->
-  <script src="../MDB Free/js/mdb.min.js"></script>
+    <!-- bootstrap js core -->
+    <script src="../MDB Free/js/bootstrap.min.js"></script>
 
-  <!-- bootstrap datepicker js -->
-  <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datepicker.min.js"></script>
+    <!-- Meterail Design Bootstrap JS -->
+    <script src="../MDB Free/js/mdb.min.js"></script>
 
-  <!-- datetimepicker js -->
-  <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+    <!-- bootstrap datepicker js -->
+    <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datepicker.min.js"></script>
 
-  <!-- leaflet js CDN -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+    <!-- datetimepicker js -->
+    <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
-  <!-- mapbox js CDN -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
+    <script src="../plugins/leaflet/js/leaflet.js"></script>
 
-  <!-- translate js plugins -->
-  <script src="../plugins/translate.js-master/jquery.translate.js"></script>
+    <!-- translate js plugins -->
+    <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
-  <script src="../custom/js/translate.js"></script>
+    <script src="../custom/js/translate.js"></script>
 
-  <!-- custom main.js -->
-  <script src="../custom/js/main.js"></script>
+    <!-- custom main.js -->
+    <script src="../custom/js/main.js"></script>
 
-  <!-- custom incident js -->
-  <script src="../custom/js/points.js"></script>
- 
+    <!-- custom points js -->
+    <script src="../custom/js/points.js"></script>
+
 </body>
 
 </html>
