commit map incident

--- a/html/assets.html
+++ b/html/assets.html
@@ -112,8 +112,10 @@
               </div>
             </div>
             <div class="row mt-3">
-              <button class="btn btn-custom bg-main-color">Export</button>
-              <button class="btn btn-custom bg-main-color" id="btnAssetsData">View</button>
+              <div class="col-12">
+                  <button class="btn btn-custom bg-main-color pull-right">Export</button>
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnAssetsData">View</button>
+              </div>
             </div>
           </div>
         </div>
