--- a/html/incidents.html
+++ b/html/incidents.html
@@ -115,8 +115,11 @@
               </div>
             </div>
             <div class="row mt-3">
-              <button class="btn btn-custom bg-main-color">Export</button>
-              <button class="btn btn-custom bg-main-color" id="btnIncidentsData">View</button>
+              <div class="col-12">
+                  <button class="btn btn-custom bg-main-color pull-right">Export</button>
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnIncidentsData">View</button>
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnIncidentsMap">Map</button>
+              </div>
             </div>
           </div>
         </div>
@@ -157,9 +160,6 @@
               </div>
               <div class="modal-body">
                 
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
