--- a/html/events.html
+++ b/html/events.html
@@ -18,12 +18,11 @@
   <!-- datepicker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet.css">
+
   <!-- leaflet css cdn -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
-
-  <!-- map box css cdn -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
 
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
@@ -95,7 +94,7 @@
 
     <div class="row my-3 row-custom">
       <!-- filter and incident card -->
-      <div class="col-lg-3">
+      <div class="col-lg-2">
         <!-- card filter start -->
         <div class="card card filter">
           <div class="card-header bg-main-color custom-card-header">
@@ -130,15 +129,17 @@
             </div>
 
             <div class="row mt-3">
-              <button class="btn btn-custom bg-main-color">Export</button>
-              <button class="btn btn-custom bg-main-color" id="btnShowEventHistoryData">View</button>
+              <div class="col-12">
+                  <button class="btn btn-custom bg-main-color pull-right">Export</button>
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnShowEventHistoryData">View</button>
+              </div>
             </div>
           </div>
         </div>
         <!-- card filter end -->
       </div>
 
-      <div class="col-lg-9">
+      <div class="col-lg-10">
 
         <!-- card incident start -->
         <div class="card card-incident">
@@ -192,7 +193,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true"
+        <div class="modal fade bd-example-modal-lg" tabindex="-1"
           id="modalEventMap">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -203,7 +204,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <div id="eventMap"></div>
+                
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
@@ -235,11 +236,10 @@
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
   <!-- leaflet js CDN -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script> -->
 
-  <!-- mapbox js CDN -->
-  <script src='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js'></script>
+  <script src="../plugins/leaflet/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
