--- a/html/points.html
+++ b/html/points.html
@@ -28,12 +28,11 @@
   <link rel="stylesheet" href="../custom/css/mainView.css">
 
   <!-- leaflet css -->
-  <!-- <script src="../plugins/leaflet/css/leaflet.css"></script> -->
-
+  <script src="../plugins/leaflet/css/leaflet.css"></script>
+  <!-- leaflet cdn backup -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
     crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  
   <title>Points</title>
 </head>
 
@@ -113,7 +112,10 @@
               </div>
             </div>
             <div class="row mt-3">
-              <button class="btn btn-custom bg-main-color" id="btnPointsData">View</button>
+              <div class="col-12">
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnPointsData">View</button>
+                  <button class="btn btn-custom bg-main-color pull-right" id="btnMapAllPoints">Map</button>
+              </div>
             </div>
           </div>
         </div>
@@ -182,7 +184,12 @@
     <!-- translate js plugins -->
     <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+    <!-- translate js -->
     <script src="../custom/js/translate.js"></script>
+
+    <!-- leaflet js cdn backup -->
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+    crossorigin=""></script>
 
     <!-- custom main.js -->
     <script src="../custom/js/main.js"></script>
