--- a/html/assets.html
+++ b/html/assets.html
@@ -76,10 +76,21 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="points.html">
+              <a class="nav-link" href="report.html">
                 <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Points</span>
+                <span class="trn">Report</span>
               </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-book icon-navbar"></i>
+                Setting
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="points.html">Points</a>
+                <a class="dropdown-item" href="guard.html">Guard</a>
+                <a class="dropdown-item" href="zone.html">Zone</a>
+              </div>
             </li>
           </ul>
           <ul class="navbar-nav">
