--- a/html/report.html
+++ b/html/report.html
@@ -30,7 +30,7 @@
   <!-- main view custom css -->
   <link rel="stylesheet" href="../custom/css/mainView.css">
 
-  <title>Main View</title>
+  <title>Report</title>
 </head>
 
 <body>
@@ -100,102 +100,65 @@
 
   <div class="container-fluid">
 
-    <div class="row mt-4">
-      <div class="col-lg-4">
-        <!-- card guard start -->
-        <div class="card card-guard">
-          <div class="card-header bg-main-color custom-card-header">
-            <h4 class="trn">Guard</h4>
-          </div>
-          <div class="card-body custom-card-body">
-            <div class="table-responsive" style="overflow-y: auto; height: 350px">
-              <table class="table table-striped table-hover my-1 custom-table text-center" id="tblGuard">
-                <!-- guard content here -->
-              </table>
-            </div>
-          </div>
-        </div>
-        <!-- card guard end -->
-        <br>
+      <div class="row my-3 row-custom">
 
-      </div>
-      <div class="col-lg-8">
-        <!-- card map start -->
-        <div class="card card-map">
-          <!-- card header -->
-          <div class="card-header bg-main-color custom-card-header">
-            <div class="row">
-              <div class="col-12">
-                <h4 class="trn">Map</h4>
+        <div class="col-lg-3 mb-4">
+            <!-- card filter start -->
+            <div class="card card filter">
+              <div class="card-header bg-main-color custom-card-header">
+                <h4>
+                  <i class="fa fa-filter"></i> Filters
+                </h4>
+              </div>
+              <div class="card-body custom-card-body">
+                <div class="row mt-3">
+                  <div class="col-12">
+                    <label for="">Guard</label><br>
+                    <select name="" class="form-control" id="jcomboboxGuardReport">
+                      <!-- guard name list -->
+                    </select>
+                  </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-12">
+                      <label for="">Date</label><br>
+                      <input type="text" readonly class="datepicker" class="form-control" style="width: 100%" id="reportDatetime">
+                  </div>
+                </div>
+                <div class="row mt-3">
+                  <div class="col-12">
+                    <button class="btn btn-custom bg-main-color pull-right" id="btnViewReport">View</button>
+                    <button class="btn btn-custom bg-main-color pull-right" id="btnExportReport2Excel">Export</button>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- card body map -->
-          <div class="card-body custom-card-body">
-
-            <div class="map" id="mapid" style="height: 350px"></div>
-
-          </div>
+            <!-- card filter end -->
         </div>
-        <!-- card map end -->
-      </div>
-    </div>
-    <div class="row mt-3">
-      <div class="col-12">
-        <!-- card controls start -->
-        <div class="card card-controls">
-          <!-- card header -->
-          <div class="card-header bg-main-color custom-card-header">
-            <h4 class="trn">Events</h4>
-          </div>
-          <div class="card-body custom-card-body">
-            <div class="row mt-1">
+    
+        <div class="col-lg-9">
+          <!-- card Points start -->
+          <div class="card card-incident">
+            <div class="card-header bg-main-color custom-card-header">
+              <h4>
+                <i class="fa fa-exclamation-triangle"></i> Reports
+              </h4>
+            </div>
+            <div class="card-body custom-card-body">
               <div class="table-responsive">
-                <table class="table table-hover table-striped text-center custom-table" id="tblEvents">
-                  <!-- event content here -->
+                <table class="table table-hover table-striped table-condensed text-center custom-table" id="tblReports">
+                  <!-- Points content here -->
                 </table>
               </div>
+            </div>
+          </div>
+          <!-- card Points end -->
+        </div>
 
-            </div>
-          </div>
-        </div>
-        <!-- card controls end -->
       </div>
-    </div>
-    <dir class="row">
-      <div class="col-12">
-        <div class="modal fade" id="modalInsertGuard">
-          <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Insert Guard</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <form>
-                  <div class="form-group">
-                    <label for="recipient-name" class="col-form-label">Recipient:</label>
-                    <input type="text" class="form-control" id="recipient-name">
-                  </div>
-                  <div class="form-group">
-                    <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-grey" data-dismiss="modal">Close</button>
-                <button type="button" class="btn bg-main-color" id="btnInsertGuard">Insert</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </dir>
+    
   </div>
-
+  
   <!-- JQuery core -->
   <script src="../MDB Free/js/jquery-3.3.1.min.js"></script>
 
@@ -225,30 +188,12 @@
 
   <!-- leaflet js -->
   <script src="../plugins/leaflet/js/leaflet.js"></script>
+  <!-- table2Excel plugins -->
+  <script src="../plugins/Export-Html-Table-To-Excel-Spreadsheet-using-jQuery-table2excel/dist/jquery.table2excel.min.js"></script>
 
-  <!-- map js -->
-  <script src="../custom/js/map.js"></script>
-
-  <script>
-    let sGuardNameIN = 'Ta Van Manh';
-    let sGuardPhone = '12456789';
-    let sGuardUsername = 'Ta Manh'
-    let sGuardPassword = '123456'
-    let iGuardIDIN = 0;
-    let bStatusIN = 1;
-
-    const sentData = {
-      sGuardNameIN,
-      sGuardPhone,
-      sGuardUsername,
-      sGuardPassword,
-      iGuardIDIN,
-      bStatusIN
-    };
-
-    console.log(JSON.stringify(sentData));
-  </script>
-
+  <script src="../custom/js/report.js"></script>
+  
+ 
 </body>
 
 </html>
