--- a/html/report.html
+++ b/html/report.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
   <!-- leaflet css -->
-  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet.css">
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">
 
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
@@ -86,6 +86,7 @@
               <a class="dropdown-item" href="points.html">Points</a>
               <a class="dropdown-item" href="guard.html">Guard</a>
               <a class="dropdown-item" href="zone.html">Zone</a>
+              <a class="dropdown-item" href="route.html">Route</a>
             </div>
           </li>
         </ul>
@@ -179,6 +180,9 @@
 
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+
+  <!-- service request -->
+  <script src="../custom/js/service.js"></script>
 
   <!-- custom main.js -->
   <script src="../custom/js/main.js"></script>
