--- a/html/assets.html
+++ b/html/assets.html
@@ -18,15 +18,11 @@
   <!-- datepicker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
-  <!-- leaflet css cdn -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
-
-  <!-- map box css cdn -->
-  <link href='https://api.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css' rel='stylesheet' />
-
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
+
+  <!-- leaflet css -->
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">
 
   <!-- main view custom css -->
   <link rel="stylesheet" href="../custom/css/main.css">
@@ -90,6 +86,7 @@
                 <a class="dropdown-item" href="points.html">Points</a>
                 <a class="dropdown-item" href="guard.html">Guard</a>
                 <a class="dropdown-item" href="zone.html">Zone</a>
+                <a class="dropdown-item" href="route.html">Route</a>
               </div>
             </li>
           </ul>
@@ -182,9 +179,13 @@
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- translate language -->
   <script src="../custom/js/translate.js"></script>
 
-  <!-- custom main.js -->
+  <!-- service request -->
+  <script src="../custom/js/service.js"></script>
+
+  <!-- main js -->
   <script src="../custom/js/main.js"></script>
 
   <!-- custom incident js -->
