--- a/html/events.html
+++ b/html/events.html
@@ -20,9 +20,8 @@
 
   <link rel="stylesheet" href="../plugins/leaflet/css/leaflet.css">
 
-  <!-- leaflet css cdn -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
+  <!-- leaflet css -->
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">
 
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
@@ -89,6 +88,7 @@
                 <a class="dropdown-item" href="points.html">Points</a>
                 <a class="dropdown-item" href="guard.html">Guard</a>
                 <a class="dropdown-item" href="zone.html">Zone</a>
+                <a class="dropdown-item" href="route.html">Route</a>
               </div>
             </li>
           </ul>
@@ -246,18 +246,17 @@
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
-  <!-- leaflet js CDN -->
-  <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script> -->
-
   <script src="../plugins/leaflet/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- translate language -->
   <script src="../custom/js/translate.js"></script>
 
-  <!-- custom main.jc -->
+  <!-- service request -->
+  <script src="../custom/js/service.js"></script>
+
   <script src="../custom/js/main.js"></script>
 
   <!-- custom incident js -->
