--- a/html/incidents.html
+++ b/html/incidents.html
@@ -19,12 +19,8 @@
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datepicker3.min.css">
 
   <!-- leaflet css -->
-  <!-- <script src="../plugins/leaflet/css/leaflet.css"></script> -->
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">->
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 
@@ -93,6 +89,7 @@
                 <a class="dropdown-item" href="points.html">Points</a>
                 <a class="dropdown-item" href="guard.html">Guard</a>
                 <a class="dropdown-item" href="zone.html">Zone</a>
+                <a class="dropdown-item" href="route.html">Route</a>
               </div>
             </li>
           </ul>
@@ -228,7 +225,11 @@
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
 
+  <!-- translate language -->
   <script src="../custom/js/translate.js"></script>
+
+  <!-- service request -->
+  <script src="../custom/js/service.js"></script>
 
   <!-- custom main.js -->
   <script src="../custom/js/main.js"></script>
