--- a/html/points.html
+++ b/html/points.html
@@ -21,84 +21,82 @@
   <!-- bootstrap datetime picker css -->
   <link rel="stylesheet" href="../plugins/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css">
 
-  <!-- main view custom css -->
+  <!-- leaflet css -->
+  <link rel="stylesheet" href="../plugins/leaflet/css/leaflet (1).css">
+
+  <!-- main custom css -->
   <link rel="stylesheet" href="../custom/css/main.css">
 
-  <!-- custom main css -->
+  <!-- custom main view css -->
   <link rel="stylesheet" href="../custom/css/mainView.css">
-
-  <!-- leaflet css -->
-  <script src="../plugins/leaflet/css/leaflet.css"></script>
-  <!-- leaflet cdn backup -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-    crossorigin="" />
 
   <title>Points</title>
 </head>
 
 <body>
   <!-- navbar start-->
-  <nav class="navbar navbar-expand-lg bg-main-color white-text" style="padding-top: 0; padding-bottom: 0">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <i class="fa fa-shield icon-custom" style="color: whitesmoke"></i>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars icon-custom" style="color: white"></i>
-        </button>
-  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="mainView.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Main View</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="events.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Events</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="incidents.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Incidents</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="assets.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Assets</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="report.html">
-                <i class="fa fa-book icon-navbar"></i>
-                <span class="trn">Report</span>
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-book icon-navbar"></i>
-                Setting
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="points.html">Points</a>
-                <a class="dropdown-item" href="guard.html">Guard</a>
-                <a class="dropdown-item" href="zone.html">Zone</a>
-              </div>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-            <button class="btn custom-btn bg-main-color trn" id="changeLanguage">English</button>
-  
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg bg-main-color white-text">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <i class="fa fa-shield icon-custom" style="color: whitesmoke"></i>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fa fa-bars icon-custom" style="color: white"></i>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="mainView.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Main View</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="events.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Events</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="incidents.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Incidents</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="assets.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Assets</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="report.html">
+              <i class="fa fa-book icon-navbar"></i>
+              <span class="trn">Report</span>
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-book icon-navbar"></i>
+              Setting
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="points.html">Points</a>
+              <a class="dropdown-item" href="guard.html">Guard</a>
+              <a class="dropdown-item" href="zone.html">Zone</a>
+              <a class="dropdown-item" href="route.html">Route</a>
+            </div>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <button class="btn custom-btn bg-main-color trn" id="changeLanguage">English</button>
+
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
   <!-- navbar end -->
 
   <div class="container-fluid">
@@ -127,16 +125,7 @@
               <div class="col-12">
                 <button class="btn btn-custom bg-main-color pull-right" id="btnPointsData">View</button>
                 <button class="btn btn-custom bg-main-color pull-right" id="btnMapAllPoints">Map</button>
-                <div class="dropdown pull-right">
-                  <button class="btn dropdown-toggle btn-custom bg-main-color" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
-                    aria-expanded="false">
-                    Action
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <button class="dropdown-item btn btn-custom btn-success" type="button">insert</button>
-                    <button class="dropdown-item btn btn-custom btn-danger" type="button">Update</button>
-                  </div>
-                </div>
+                <button class="btn btn-custom bg-main-color pull-right" id="btnInsertPoint">Insert</button>
               </div>
             </div>
           </div>
@@ -163,6 +152,8 @@
         <!-- card Points end -->
       </div>
     </div>
+
+    <!-- nodal all points map -->
     <div class="row">
       <div class="col-12">
         <div class="modal fade bd-example-modal-lg" id="modalMapPoint">
@@ -183,32 +174,86 @@
       </div>
     </div>
 
+    <!-- modal update point -->
     <div class="row">
       <div class="col-12">
-        <div class="modal fade" id="modalInsertPoints">
+        <div class="modal fade" id="modalUpdatePoint">
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Update Point</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-                <form>
-                  <div class="form-group">
-                    <label for="recipient-name" class="col-form-label">Recipient:</label>
-                    <input type="text" class="form-control" id="recipient-name">
+                <div class="row">
+                  <div class="col-lg-6" id="updatePointMap"></div>
+                  <div class="col-lg-6">
+                    <div class="form-group">
+                      <label for="" class="font-weight-bold">Point code</label>
+                      <input type="text" class="form-control" placeholder="Point code" id="txtUpdatepointCode">
+                    </div>
+                    <div>
+                      <label for="" class="font-weight-bold">Lat: </label>
+                      <span id="latUpdatePoint" class="latPoint"></span>
+                    </div>
+                    <div>
+                      <label for="" class="font-weight-bold">Long: </label>
+                      <span id="longUpdatePoint" class="longPoint"></span>
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <label for="message-text" class="col-form-label">Message:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
-                  </div>
-                </form>
+                </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Send message</button>
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal" id="btnUpdatePoint">Update</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- modal insert point -->
+    <div class="row">
+      <div class="col-12">
+        <div class="modal fade" id="modalInsertPoint">
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Insert Point</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="row">
+                  <div class="col-lg-6" id="insertPointMap"></div>
+                  <div class="col-lg-6">
+                      <div class="form-group">
+                        <label for="" class="font-weight-bold">Point code</label>
+                        <input type="text" class="form-control" placeholder="Point code" id="txtInsertPointCode">
+                      </div>
+                      <div class="form-group">
+                          <label for="" class="font-weight-bold">Zone</label>
+                          <select id="selectZoneInsertPoint" class="form-control">
+                            <option value=""></option>
+                          </select>
+                      </div>
+                      <div>
+                        <label for="" class="font-weight-bold">Lat: </label>
+                        <span id="latInsertPoint" class="latPoint"></span>
+                      </div>
+                      <div>
+                        <label for="" class="font-weight-bold">Long: </label>
+                        <span id="longInsertPoint" class="longPoint"></span>
+                      </div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-custom bg-main-color" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
@@ -235,7 +280,7 @@
   <!-- datetimepicker js -->
   <script src="../plugins/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
 
-  <script src="../plugins/leaflet/js/leaflet.js"></script>
+  <script src="../plugins/leaflet/js/js/leaflet.js"></script>
 
   <!-- translate js plugins -->
   <script src="../plugins/translate.js-master/jquery.translate.js"></script>
@@ -243,9 +288,8 @@
   <!-- translate js -->
   <script src="../custom/js/translate.js"></script>
 
-  <!-- leaflet js cdn backup -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-    crossorigin=""></script>
+  <!-- service request -->
+  <script src="../custom/js/service.js"></script>
 
   <!-- custom main.js -->
   <script src="../custom/js/main.js"></script>
